src/components/general/Header/index.module.scss
@use '@/styles/constants' as *;

.header {
  display: flex;
  padding: 3rem 2rem;
  align-items: center;
  justify-content: space-between;
  background-color: $background-box-color;
  box-shadow: $shadow;
  height: 8vh;
  z-index: 3;
  font-weight: bold;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
}

.leftContent {
  display: flex;
  align-items: center;

  h1 {
    color: $primary-color;
    font-family: "Bebas Neue", serif;
    font-size: 3rem;
  }

  @media screen and (max-width: 767px) {
    nav {
      display: none;
    }
  }
}

.user {
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;

  @media screen and (max-width: 767px) {
    span {
      display: none;
    }
  }

  @media screen and (min-width: 768px) {
    span {
      margin-right: 1rem;
    }
  }
}

